Fix line spacing.

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ main {
     height: 70%;
     padding: 20px;
     border-radius: 15px;
-    line-height: 25px;
+    line-height: 30px;
     letter-spacing: 1.5px;
 }
 
